# Zepto-Review-Insights-Analyser

./: README.md
phase-1-ingestion/: README.md  pyproject.toml  requirements.txt
phase-1-ingestion/config/: settings.yaml
phase-1-ingestion/pulse/: config.py
phase-1-ingestion/pulse/agent/: tools.py
phase-1-ingestion/pulse/ingestion/: filters.py  normalize.py  service.py
phase-1-ingestion/pulse/state/: ledger.py
phase-1-ingestion/tests/: test_appstore_parse.py
phase-2-preprocessing/: .gitignore  README.md  pyproject.toml
phase-2-preprocessing/config/: products.yaml  settings.yaml
phase-2-preprocessing/pulse/: config.py
phase-2-preprocessing/pulse/agent/: core.py  tools.py
phase-2-preprocessing/pulse/ingestion/: appstore.py
phase-2-preprocessing/tests/: conftest.py  test_config.py  test_ingestion_service.py  test_registry_budget.py
phase-3-clustering/: README.md  pyproject.toml  requirements.txt
phase-3-clustering/config/: settings.yaml
phase-3-clustering/pulse/: __init__.py  config.py  models.py
phase-3-clustering/pulse/agent/: tools.py
phase-3-clustering/pulse/ingestion/: cache.py
phase-3-clustering/pulse/preprocess/: __init__.py
phase-3-clustering/pulse/reasoning/: embed.py
phase-3-clustering/pulse/utils/: isoweek.py  retry.py  text.py
phase-3-clustering/tests/: synth.py  test_cluster_tool.py  test_isoweek.py  test_language.py  test_playstore_parse.py
phase-3-clustering/tests/fixtures/: appstore_empty.json
phase-4-summarization/: README.md  pyproject.toml
phase-4-summarization/config/: settings.yaml
phase-4-summarization/pulse/: config.py  models.py
phase-4-summarization/pulse/agent/: tools.py
phase-4-summarization/pulse/preprocess/: pii.py
phase-4-summarization/tests/: synth.py  test_budget_halt.py  test_cluster_real.py  test_fetch_reviews_tool.py  test_ledger.py  test_llm_parse.py  test_text.py  test_validate.py
(+152 files in other folders)
