[project]
name = "pulse-phase1"
version = "0.1.0"
description = "Weekly Product Review Pulse — Phase 1 (Ingestion)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "PyYAML>=6",
    "langdetect>=1.0.9",
    "google-play-scraper>=1.2.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
