[project]
name = "pulse-phase2"
version = "0.2.0"
description = "Weekly Product Review Pulse — Phase 2 (Preprocessing & Safety)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "PyYAML>=6",
    "langdetect>=1.0.9",
    "google-play-scraper>=1.2.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
