[project]
name = "pulse-phase3"
version = "0.3.0"
description = "Weekly Product Review Pulse — Phase 3 (Clustering)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "PyYAML>=6",
    "langdetect>=1.0.9",
    "google-play-scraper>=1.2.6",
    "numpy>=1.23",
    "umap-learn>=0.5",
    "hdbscan>=0.8.33",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
